# nventory

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/api/: deps.py
app/api/v1/: analytics.py  catalog.py  orders.py  products.py  purchases.py  refunds.py  router.py
app/core/: config.py  database.py  exceptions.py  logging.py
app/models/: __init__.py  batch.py  category.py  client.py  order.py  product.py  provider.py  refund.py  storage.py
app/schemas/: analytics.py  category.py  client.py  common.py  order.py  product.py  provider.py  purchase.py  refund.py  storage.py
app/services/: analytics.py  order.py  purchase.py  refund.py  stock.py
tests/: _helpers.py  conftest.py  test_analytics.py  test_health_and_meta.py  test_orders_fifo.py  test_purchases.py  test_refunds.py
